@@ -36,6 +36,7 @@
     + Blank 'MAC' on SNMP-ARP and SNMP-MAC scans (#2911);
     + API:
         + Fixed /user/ calls for SSL with app code (static app code);
+        + Address IP field not displayed when using filter_by (#2934);
 
     Security Fixes:
     ----------------------------
